fix: align verticaly icons inside navbar

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -12,7 +12,7 @@
 
 .icon {
     position: relative;
-    top: -2px;
+    top: -0.3px;
     width: 20px;
     height: 20px;
     stroke-width: 2px;
